--- a/pages/Estyle.css
+++ b/pages/Estyle.css
@@ -1,3 +1,107 @@
+:root{
+  font-size: 62.5%;
+
+  --cor-padrao :  #00E6AB;
+  --cor-constraste-1:  hsl(0, 0%, 100%);
+  --cor-constraste-2:  hsl(165, 94%, 86%);
+
+}
+
+*{
+  box-sizing: border-box;
+}
+
 body{
-  background-color: #00e6ad;
+  margin: 0;
+  font-size: 1.6rem;
+  
+}
+main , header , section, body{
+  margin-top: 0;
+  font-weight: 900;
+}
+
+body{
+  padding: 0;
+}
+
+#App{
+  display: flex;
+  flex-direction: column;
+
+  gap: 3.3rem;
+
+  width: 60rem;
+  height: 73.5rem;
+
+  margin: 0 auto;
+  padding: 4.7rem 5.9rem;
+  padding-top: 0;
+}
+
+header{
+  color: var(--cor-constraste-1);
+  background-color: var(--cor-padrao) ;
+
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  text-align: center;
+  align-items: center;
+
+  border-radius: 0 0 20rem 0;
+
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+header a{
+  padding: 1rem;
+  width: 8rem;
+
+  margin-left: 1rem;
+  background-color: var(--cor-constraste-1);
+  color: var(--cor-padrao);
+
+  border-radius: 2rem ;
+  font-size: 2rem;
+  font-weight: 900;
+  text-decoration: none;
+}
+
+header > a > i{
+  color: var(--cor-padrao);
+}
+
+header h1{
+  margin-left: 10rem;
+}
+
+main{
+  display: flex;
+  flex-direction: column;
+
+  gap: 3.3rem;
+
+}
+
+section{
+  display: flex;
+  flex-direction: column;
+
+  background-color: var(--cor-padrao);
+  color: var(--cor-constraste-1);
+
+  border-radius: 2rem;
+  padding: 2rem;
+}
+
+section h2{
+  text-align: start;
+
+  background-color: var(--cor-constraste-2);
+}
+
+section p{
+  background-color: var(--cor-constraste-2);
 }
