--- a/pages/SKstyle.css
+++ b/pages/SKstyle.css
@@ -1,3 +1,131 @@
+:root{
+  font-size: 62.5%;
+
+  --cor-padrao :  #00E6AB;
+  --cor-constraste-1:  hsl(0, 0%, 100%);
+  --cor-constraste-2:  hsl(165, 94%, 86%);
+
+}
+
+*{
+  box-sizing: border-box;
+}
+
 body{
-  background: #00e6ac;
+  margin: 0;
+  font-size: 1.6rem;
+  
+}
+main , header , section, body{
+  margin-top: 0;
+  font-weight: 900;
+}
+
+body{
+  padding: 0;
+}
+
+#App{
+  display: flex;
+  flex-direction: column;
+
+  gap: 3.3rem;
+
+  width: 60rem;
+  height: 73.5rem;
+
+  margin: 0 auto;
+  padding: 4.7rem 5.9rem;
+  padding-top: 0;
+}
+
+header{
+  color: var(--cor-constraste-1);
+  background-color: var(--cor-padrao) ;
+
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  text-align: center;
+  align-items: center;
+
+  border-radius: 0 0 20rem 0;
+
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+header a{
+  padding: 1rem;
+  width: 8rem;
+
+  margin-left: 1rem;
+  background-color: var(--cor-constraste-1);
+  color: var(--cor-padrao);
+
+  border-radius: 2rem ;
+  font-size: 2rem;
+  font-weight: 900;
+  text-decoration: none;
+}
+
+header > a > i{
+  color: var(--cor-padrao);
+}
+
+header h1{
+  margin-left: 10rem;
+}
+
+main section #border{
+
+  position: relative;
+  top: -10rem;
+  left: 6rem;
+  width : 17.5rem ;
+  height  : 13rem ;
+
+  border: 2px solid --cor-padrao;
+
+  border-radius: 0 4rem 0 4rem;
+
+  padding: 0;
+
+  z-index: 2;
+
+  background-color: red;
+
+
+}
+
+section #title_skill{
+  width :44.9rem;
+  height : 7.2rem;
+  z-index: 3;
+  background-color: black;
+  color: var(--cor-constraste-1);
+  border-radius: 4rem 0 4rem 0;
+  padding: 2rem;
+
+  text-align : end ;
+
+  
+}
+
+section #textoSHORT{
+
+  position: relative;
+  bottom: -1.0rem;
+
+  margin: 0 auto ;
+  padding: 1rem;
+
+  text-align: center;
+
+  border-radius: 4rem 0 4rem 0;
+  height :7.2rem;
+  width   : 12.8rem;
+
+  z-index: 3;
+  background-color: blue;
 }
