--- a/pages/SKstyle.css
+++ b/pages/SKstyle.css
@@ -77,6 +77,10 @@ header h1{
   margin-left: 10rem;
 }
 
+main{
+  color: var(--cor-constraste-1);
+}
+
 main section #border{
 
   position: relative;
@@ -85,7 +89,7 @@ main section #border{
   width : 17.5rem ;
   height  : 13rem ;
 
-  border: 2px solid --cor-padrao;
+  border: 0.01px solid var(--cor-padrao);
 
   border-radius: 0 4rem 0 4rem;
 
@@ -93,7 +97,7 @@ main section #border{
 
   z-index: 2;
 
-  background-color: red;
+  background-color: var(--cor-constraste-1);
 
 
 }
@@ -109,6 +113,8 @@ section #title_skill{
 
   text-align : end ;
 
+  background-color: var(--cor-padrao);
+
   
 }
 
@@ -116,6 +122,7 @@ section #textoSHORT{
 
   position: relative;
   bottom: -1.0rem;
+  top: 2.8rem;
 
   margin: 0 auto ;
   padding: 1rem;
@@ -126,6 +133,8 @@ section #textoSHORT{
   height :7.2rem;
   width   : 12.8rem;
 
+  box-sizing:border-box;
+
   z-index: 3;
-  background-color: blue;
+  background-color: var(--cor-padrao);
 }
