Bug from nav center solved

--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ header img{
   border-radius: 2rem;
   
   margin: 0 auto;
+  text-align: center;
 
   width: 38.5rem;
   height: 2.6rem;
@@ -109,17 +110,22 @@ nav{
   height: 15rem;
 
   margin: 0 auto;
+
+  text-align: center;
+
 }
 
 nav ul{
 
-  margin-top: 0;
+  margin: 0 auto;
   list-style-type: none;
 
   display: flex;
   flex-direction: column;
   
   align-items: center;
+  padding-inline-start : 0;
+
 
 }
 
