--- a/pages/SKstyle.css
+++ b/pages/SKstyle.css
@@ -125,13 +125,14 @@ section #textoSHORT{
   top: 2.8rem;
 
   margin: 0 auto ;
-  padding: 1rem;
+  padding-top: 2rem;
 
   text-align: center;
 
   border-radius: 4rem 0 4rem 0;
   height :7.2rem;
   width   : 12.8rem;
+
 
   box-sizing:border-box;
 
