--- a/pages/Estyle.css
+++ b/pages/Estyle.css
@@ -86,6 +86,7 @@ main{
 }
 
 section{
+  margin-top: 12rem;
   display: flex;
   flex-direction: column;
 
@@ -102,5 +103,16 @@ section h2{
 
 section >*{
   text-align: left;
-  tex
+}
+
+section img{
+  width: 15rem;
+  height: 15rem;
+
+  margin: 0 auto;
+
+  border-radius: 4rem;
+  border: 2px solid #00E6AB;
+
+  margin-top: -13rem;
 }
