--- a/pages/MEUSPJstyle.css
+++ b/pages/MEUSPJstyle.css
@@ -1,12 +1,209 @@
 :root{
   font-size: 62.5%;
+
+  --cor-padrao :  #00E6AB;
+  --cor-constraste-1:  hsl(0, 0%, 100%);
+  --cor-constraste-2:  hsl(165, 94%, 86%);
+}
+
+*{
+  box-sizing: border-box;
 }
 
 body{
-  background-color: #00e6af;
+  margin: 0;
+  font-size: 1.6rem;
+  
+}
+main , header , section, body{
+  margin-top: 0;
+  font-weight: 900;
+}
+
+body{
+  padding: 0;
+}
+
+#App{
+  display: flex;
+  flex-direction: column;
+
+  gap: 3.3rem;
+
+  width: 60rem;
+  height: 73.5rem;
+
+  margin: 0 auto;
+  padding: 4.7rem 5.9rem;
+  padding-top: 0;
+}
+
+#App header{
+  color: var(--cor-constraste-1);
+  background-color: var(--cor-padrao) ;
+
+  display: flex;
+  flex-direction: row;
+
+  text-align: start;
+  align-items: center;
+
+  border-radius: 0 0 10rem 10rem;
+
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+#App header a{
+  padding: 1rem;
+  width: 8rem;
+
+  margin-left: 1rem;
+  color: var(--cor-constraste-1);
+  background-color: var(--cor-padrao);
+
+  border-radius: 2rem ;
+  font-size: 2rem;
+  font-weight: 900;
+  text-decoration: none;
+
+  display: flex;
+  justify-content: center;
+}
+
+#App header > a > i{
+  color: var(--cor-padrao);
+
+}
+
+#App header{
+  align-items: center;
+
+  display: flex;
+  flex-direction: column;
+
+  margin-bottom: -3rem;
+
+}
+
+header img{
+
+  border: 2px solid var(--cor-padrao);
+
+  margin-bottom: 0 aut;
+  border-radius: 50%;
+
+  width: 21.2rem;
+  height: 21.2rem;
+
+}
+
+#header_links{
+  color: red;
+}
+
+a{
+ text-decoration: none;
+ color: var(--cor-constraste-1);
+}
+
+main section a{
+  background-color: var(--cor-padrao);
+}
+main {
+  box-sizing: content-box;
+  margin: 3.4rem auto;
+  width: 60rem;
+}
+
+section{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+
+}
+
+main  img{
+  position: absolute;
+  left: 5rem;
+  margin-top: 1.5rem;
+
+  border: 2px solid var(--cor-padrao);
+  border-radius: 2rem;
+  height: 20rem;
+  
+  z-index: 2;
+}
+
+section a{
+  position: relative;
+
+  top: 20rem;
+  left: 1.8rem;
+  
+  margin-left: 6rem;
+  margin-bottom: 5rem;
+  
+  z-index: 0;
+  padding: 2rem;
+  padding-left: 4rem;
+  padding-bottom: 0px;
+  height: 20em;
+  width: 30rem;
+
+  border-radius: 2rem;  
+
+  text-decoration: none;
+  font-size: 2rem;
+  font-weight: 900;
+  text-align: start;
+  line-height: 16px;
+
+  color:var(--cor-constraste-1);
+}
+
+a h4{
+  font-weight: 400;
   font-size: 1.6rem;
 }
 
-img{
-  width: 80rem;
+ul{
+  background-color: var(--cor-padrao);
+
+  padding: 0.3rem 1rem;
+
+  height: 10rem;
+  width: 63.5rem;
+
+  border-radius: 4rem;
+
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+nav{
+
+  margin: 0rem;
+  background-color:var(--cor-padrao);
+  width: 48.2rem; 
+  padding: 0.8rem;
+  overflow-x: hidden;
+  overflow-x: scroll;
+
+  border-radius: 4rem;
+  
+}
+ul li{
+  list-style: none;
+}
+
+li a {
+
+  padding: 1rem;
+
+  background-color: var(--cor-constraste-1);
+  color: var(--cor-padrao);
+
+  border-radius: 1.5rem;
 }
