--- a/pages/MEUSPJstyle.css
+++ b/pages/MEUSPJstyle.css
@@ -31,8 +31,7 @@ body{
   gap: 3.3rem;
 
   width: 60rem;
-  height: 73.5rem;
-
+  height:895rem;
   margin: 0 auto;
   padding: 4.7rem 5.9rem;
   padding-top: 0;
@@ -72,8 +71,31 @@ body{
 }
 
 #App header > a > i{
+  background-color: var(--cor-constraste-1);
+  color: var(--cor-padrao);
+  padding: 1rem;
+
+  border-radius: 1.5rem ;
+  width: 8rem;
+
+  font-size: 2.4rem;
+
+
+}
+
+header a{
+  padding: 1rem;
+  width: 8rem;
+
+  margin-left: 1rem;
+  background-color: var(--cor-constraste-1);
   color: var(--cor-padrao);
 
+  border-radius: 2rem ;
+  font-size: 2rem;
+  font-weight: 900;
+  text-decoration: none;
+  text-align: center;
 }
 
 #App header{
@@ -83,11 +105,11 @@ body{
   flex-direction: column;
 
   margin-bottom: -3rem;
-
 }
 
 header img{
   background-color: var(--cor-constraste-1);
+  color: var(--cor-constraste-1);
   border: 2px solid var(--cor-padrao);
 
   margin-bottom: 0 auto;
@@ -107,26 +129,30 @@ a{
  color: var(--cor-constraste-1);
 }
 
-main section a{
-  background-color: var(--cor-padrao);
-}
 main {
   box-sizing: content-box;
-  margin: 3.4rem auto;
+  margin: 0 auto;
   width: 60rem;
 }
 
 section{
   position: relative;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 
+  justify-content: center;
+
+  height: 100vh;
+
+}
+
+#p1{
+  margin-top: -5rem;
 }
 
 main  img{
   position: absolute;
   left: 5rem;
-  margin-top: 1.5rem;
 
   border: 2px solid var(--cor-padrao);
   border-radius: 2rem;
@@ -135,20 +161,22 @@ main  img{
   z-index: 2;
 }
 
-section a{
+section > a{
   position: absolute;
 
-  top: 20rem;
+  top: 46rem;
   left: 1.8rem;
-  
+
   margin-left: 6rem;
-  margin-bottom: 5rem;
+  margin-bottom: -20rem;
   
   z-index: 0;
   padding: 2rem;
+
+  padding-top: 3rem;
   padding-left: 4rem;
-  padding-bottom: 0px;
-  height: 12em;
+  padding-bottom: 0;
+  height: 24rem;
   width: 30rem;
 
   border-radius: 2rem;  
@@ -159,14 +187,22 @@ section a{
   text-align: start;
   line-height: 16px;
 
+  background-color: var(--cor-padrao);
+
   color:var(--cor-constraste-1);
 }
+
+
 
 a h4{
   font-weight: 400;
   font-size: 1.6rem;
 }
 
+a #TechUsed{
+  display: flex;
+  gap: 8rem;
+}
 ul{
   background-color: var(--cor-padrao);
 
@@ -183,6 +219,8 @@ ul{
 }
 
 nav{
+  position: sticky;
+  top: 0.1rem;
 
   margin: 0rem;
   background-color:var(--cor-padrao);
@@ -192,6 +230,8 @@ nav{
   overflow-x: scroll;
 
   border-radius: 4rem;
+
+  z-index: 4;
   
 }
 ul li{
