--- a/pages/Estyle.css
+++ b/pages/Estyle.css
@@ -30,8 +30,9 @@ body{
   flex-direction: column;
 
   gap: 3.3rem;
-
-  width: 60rem;
+  
+  max-width: 60rem;
+  width: 100vw;
   height: 73.5rem;
 
   margin: 0 auto;
