--- a/pages/Estyle.css
+++ b/pages/Estyle.css
@@ -52,6 +52,9 @@ header{
 
   margin-bottom: 0;
   margin-top: 0;
+
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 header a{
@@ -82,9 +85,6 @@ header h1{
   width: 13.2rem;
 }
 
-header h1{
-  margin-left: 10rem;
-}
 
 main{
   display: flex;
