--- a/pages/SKstyle.css
+++ b/pages/SKstyle.css
@@ -39,7 +39,6 @@ body{
   padding: 4.7rem 5.9rem;
   padding-top: 0;
 }
-
 header{
   color: var(--cor-constraste-1);
   background-color: var(--cor-padrao) ;
@@ -50,15 +49,18 @@ header{
   text-align: center;
   align-items: center;
 
-  border-radius: 0 0 20rem 0;
+  border-radius:  0 0 20rem 20rem ;
 
-  margin-bottom: 0;
+  margin-bottom: 2.3rem;
   margin-top: 0;
+
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 header a{
   padding: 1rem;
-  width: 8rem;
+  width: 6rem;
 
   margin-left: 1rem;
   background-color: var(--cor-constraste-1);
@@ -68,18 +70,22 @@ header a{
   font-size: 2rem;
   font-weight: 900;
   text-decoration: none;
+
+  position: fixed;
+  left: 1rem;
+  top: 1rem;
+  z-index: 2;
 }
 
 header > a > i{
-  color: var(--cor-padrao);
+  color: var(--cor-padrao)
 }
 
 header h1{
-  margin-left: 10rem;
+  margin: 0 auto;
 }
 
 main{
-
   margin-top: 3.3rem;
   color: var(--cor-constraste-1);
 }
@@ -143,3 +149,95 @@ section #textoSHORT{
   background-color: var(--cor-padrao);
 }
 
+
+@media (max-width: 42.5rem){
+
+  #App{
+    max-width: 42.5rem;
+    width: 28.6rem;
+    height: fit-content;
+
+    padding:0px; /* diminui 4.2 de cada */
+    padding-top: 2.3rem;
+    box-sizing: border-box;
+  }
+
+
+  header{
+    gap: 0px;
+    margin-bottom: 2.3rem;
+    padding: 2rem 0px;
+    justify-content:space-evenly;
+
+  }
+
+  header h1{
+    padding: 0;
+    width: 9.5rem;
+    margin: 0 auto;
+    position: relative;
+    z-index: 1;
+  }
+
+  header a {
+    position: fixed;
+    left: 1rem;
+    top: 1rem;
+    z-index: 2;
+  }
+
+  main{
+    margin-top: 2.3rem;
+  }
+
+  main section #border{
+    top: -7rem;
+    left: 1rem;
+    width : 15.5rem ; /*diminui 5rem de cada */
+    height  : 8rem ;
+    border-radius: 0 3rem 0 3rem;
+  }
+
+  section #title_skill{
+    width :28.5rem;
+    height : 6.2rem;
+    z-index: 3;
+    background-color: black;
+    color: var(--cor-constraste-1);
+    border-radius: 3rem 0 3rem 0;
+    padding: 2rem;
+    background-color: var(--cor-padrao);
+  }
+
+  section #textoSHORT{
+
+    height :4.2rem;
+    width   : 12rem;
+
+    position: relative;
+    bottom: -1rem;
+    top: 1.5rem;
+  
+    margin: 0 auto ;
+    padding-top: 1rem;
+  
+    text-align: center;
+  
+    border-radius: 3rem 0 3rem 0;
+    box-sizing:border-box;
+  
+    z-index: 3;
+    background-color: var(--cor-padrao);
+  }
+
+  section  #border.b3{
+    top: -7rem;
+    width : 18rem;
+  }
+
+  section #textoSHORT.t3{
+    top: 0.9rem;
+    width : 14rem;
+    height: 6rem;
+  }
+}
