--- a/style.css
+++ b/style.css
@@ -462,26 +462,6 @@ a h4{
     display: flex;
     flex-direction: row;
   }
-  /*
-  
-  .li{
-  
-    text-align: start;
-    align-items: center;
-  
-    width: 23.9rem;
-    height: 3.9rem;
-  
-    border-radius: 2rem;
-  
-    background-color: #00E6AB;
-  
-    display: flex;
-    flex-direction: column;
-    place-content:center;
-  
-  }
-  */
 
   main {
     width: 60rem;
@@ -493,13 +473,25 @@ a h4{
     flex-direction: row;
   }
   
-  main  img{
-    height: 13rem;
-  }
-  
   section a{
-    height: 8rem;
+    
+    position: relative;
+
+    left: 15rem;
+
+    margin: 0 auto;
+    height: 9rem;
+    width: 20rem;
   }
+
+  a img{
+    height: 13rem;
+    position: absolute;
+    left: -21rem;
+    top: -3.5rem;
+  }
+
+
 }
 
 
@@ -557,17 +549,22 @@ a h4{
     width: 60rem;
   }
 
-  #block  img{
+  a  img{
     height: 15rem;
     position: absolute;
     top: -4rem;
     left: -25rem;
   }
 
-  #block a{
+  section #block a{
+    display: block;
     position: relative;
+
     left: 15rem;
-    height: 8rem;
-    width: 5rem;
+
+    margin: 0 auto;
+    height: 9rem;
+    width: 20rem;
   }
+
 }
